--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,20 @@
+body {
+    background: black;
+    display: center;
+    margin: 100px;
+    border-radius: 10px;
+    border: 6px solid;
+    position: relative;
+}
 
-/* 
+.BigCounter {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    font-size: 300px;
+    background: black;
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+.far, .digits{
+    color: white;
+}
